--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -174,7 +174,7 @@ fr:
     view in reader:                             "Voir%{reference} dans le lecteur"
   users:
     settings:                                   "Paramètres"
-    no connection friends:                      "None of your %{connection} friends appear to be on YouVersion yet."
+    no connection friends:                      "aucun de vos %{relations} amis ne semblent encore être sur YouVersion."
     creation form errors:                       "L'erreur (les erreurs) suivante(s) empêche(nt) la création de votre compte:"
     profile form errors:                        "L'erreur (les erreurs) suivante(s) empêche(nt) la création de votre profil:"
     email address:                              "Adresse Email :"
@@ -193,7 +193,7 @@ fr:
     following title:                            "Personnes que je suis"
     user does not follow you:                   "%{user} ne vous suit pas"
     recent activity:                            "Les activités récentes"
-    my recent_activity:                         "My Recent Activity"
+    my recent_activity:                         "Mes activités récentes"
     started following:                          "S'est abonné"
     subscribed to plan:                         "Les utilisateurs inscrits au %{plan}"
     reading:                                    "Les utilisateurs lisant ce plan"    
@@ -219,14 +219,14 @@ fr:
     user bookmarks:                             "Les signets de %{user}"
     my likes:                                   "Mes mentions j'aime"
     user likes:                                 "Les mentions j'aime de %{user}"
-    my badges:                                  "My Badges"
+    my badges:                                  "Mes insignes"
     revised date:                               "Dernière révision faite le %{date}"
     update email copy:                          "Entrez un nouvel email et cliquez sur Mettre à jour l'adresse Email. Vous recevrez un lien pour confirmer votre nouvelle adresse."
     edit email:                                 "Mettre à jour l'adresse Email"
     update email check:                         "Veuillez consulter votre Email et cliquer sur le lien pour confirmer votre nouvelle adresse mail"
     confirm update email success:               "Merci! Vous avez mis à jour votre adresse Email."
     confirm update email error:                 "Désolé, un problème est survenu lors du changement de votre adresse Email."
-    account confirmed:                          "Your account has been confirmed!"
+    account confirmed:                          "Votre compte a été confirmé!"
     invalid email forgot:                       "Désolé, nous n'avons trouvé aucun correspondant à cette adresse Email. Veuillez réessayer."
     send new password button:                   "Envoyer un nouveau mot de passe"
     forgot password copy:                       "Entrez votre adresse mail et cliquez sur Envoyer Nouveau Mot de Passe, et nous vous enverrons un nouveau mot de passe à votre adresse."
@@ -356,7 +356,7 @@ fr:
       update:                                   "Mettre à jour mes alertes"
   bookmarks:
     edit:                                       "Modifier"
-    delete:                                     "Delete this Bookmark"
+    delete:                                     "Supprimer le signet"
     title field:                                "Titre"
     lables:                                     "Étiquettes"
     all:                                        "Toutes"
@@ -369,13 +369,13 @@ fr:
     labels placeholder:                         "Séparer les différentes étiquettes avec une virgule."
     save:                                       "Enregistrer favori"
     confirm delete:                             "Oui, j'en suis sûre"
-    loading:                                    "Loading your bookmarks..."
+    loading:                                    "En train de charger vos signets"
   badges:
     earned a badge:                             "Gagné un badge"
     user badges:                                "Les badges de %{user}"
   plans:
     title:                                      "Les plans de lecture"
-    browse by category:                         "Browse by Category"
+    browse by category:                         "Recherche par catégories"
     browse plans:                               "Parcourir les plans de %{category}"
     all:                                        "Tous"
     all plans:                                  "Tous les plans"
@@ -406,14 +406,14 @@ fr:
     subscribe to plan:                          "Commencer ce plan"
     previous day:                               "Jour précédent"
     next day:                                   "Jour suivant"
-    reading completed _ mark and show next:     "Next: %{next_reference}"
+    reading completed _ mark and show next:     "Suite: %{prochaine_référence}"
     which reading:                              "%{current} de %{total}"
     done reading:                               "Effectuée"
     read today:                                 "Voir la lecture d'aujourd'hui"
-    completion status _ below percentage:       "Complete"
+    completion status _ below percentage:       "Terminé"
     current progress html:                      "Jour <b>%{day}</b> de <b>%{total_days}</b>"
-    start date _ before date string:            "Start Date:"
-    end date _ before date string:              "End Date:"
+    start date _ before date string:            "Date de départ:"
+    end date _ before date string:              "Date de fin:"
     are you behind:                             "Vous avez pris du retard?"
     do you want to reset:                       "Vous voulez recommencer à zéro ?"
     catch up text:                              "Remplacez votre lecture du jour par celle du dernier jour achevé (jour %{last_completed_day} du plan)."
@@ -488,14 +488,14 @@ fr:
     all versions:                               "Toutes les traductions en %{language_name}"
   donate:
     donate now:                                 "Faire un don maintenant"
-    donate now intl:                            "or donate internationally"
+    donate now intl:                            "Dons extérieurs aux US"
     promo 1:                                    "Pour chaque dollar donné,10 personnes supplémentaires auront accès à la Bible sur leur téléphone portable."
     promo 2:                                    "Avec YouVersion, la Bible est toujours à portée de main. Regardez notre vidéo."
     promo 3:                                    "Cette année, plus de 5 milliards de personnes utiliseront un téléphone portable. Faire un don maintenant."
     headline:                                   "Tout le monde a besoin de la Parole de Dieu."
     subhead:                                    "Permettez à des millions de personnes sur la planète de manipuler la Bible du bout des doigts."
     copy:                                       "Imaginez-vous en train d'offrir une Bible à chaque personne sur terre. Eh bien, faire un don à YouVersion équivaut à ça. Nous vivons à une époque dont d'autres n'ont fait que rêver; où quiconque avec un téléphone a accès à la Bible pour expérimenter l'histoire d'amour de Dieu pour nous. Grâce à votre soutien, nous permettrons à beaucoup plus de personnes de passer plus de temps dans les Écritures."
-    amount:                                     "Donation amount (USD)"
+    amount:                                     "montant du don (US Dollars)"
     name:                                       "Votre nom"
     card number:                                "Numéro de carte de crédit"
     card exp date:                              "date d'expiration (MMAA)"
@@ -505,7 +505,7 @@ fr:
     header confirm copy:                        "Ensemble, nous pouvons devenir la génération la plus engagée de l'histoire vis à vis de la Bible. Votre soutien implique que plus de gens pourront avoir accès à la Parole de Dieu, par plus de supports, plus de langues traduites, plus de versions et plus de pays que jamais auparavant. Cliquez sur Dons maintenant afin de faire un don."
     donate now button:                          "Faire un don maintenant"
     email header:                               "YouVersion, a ministry of LifeChurch.tv, has received your donation. No goods or services were provided in exchange for the donation, except intangible religious benefits. Please contact giving@lifechurch.tv with questions."
-    email footer:                               "Your donation will help people around the world fall in love with God's Word."
+    email footer:                               "Votre don aidera les gens partout dans le monde à aimer la Parole de Dieu."
   download ad:
     title:                                      "Télécharger la Bible App gratuite"
     line 1:                                     "Des centaines de traductions dans"
@@ -571,25 +571,25 @@ fr:
     java:                                       "Java"
     symbian:                                    "Symbian"
     mobile web:                                 "Mobile Web"
-    amazon:                                     "Kindle Fire"
+    amazon:                                     "Tablette Kindle Fire"
   pages:
     generic_error:
-      title:                                    "Oops!"
-      explanation:                              "Something went wrong behind the scenes! You can try again by reloading the page, we're very sorry for the inconvenience!"
-      our action:                               "We've been notified about this and will jump on it as soon as possible."
+      title:                                    "Oups!"
+      explanation:                              "Quelque chose n'a pas fonctionné! Merci d'essayer encore en rechargeant la page. Désolé pour ce contretemps."
+      our action:                               "Nous avons été informé de cela et nous le règlerons dès que possible."
   shared:
     menu_settings:
-        title:                                  "Your Settings"
+        title:                                  "Vos paramètres"
         close:                                  "Fermer"
-        font:                                   "Font:"
+        font:                                   "Polices:"
         font1:                                  "Helvetica"
         font2:                                  "Georgia"
         font3:                                  "Baskerville"
         font4:                                  "Verdana"
-        font size:                              "Size:"
+        font size:                              "Taille:"
         small:                                  "Petite"
         medium:                                 "Moyenne"
         large:                                  "Grande"
-        highlights:                             "Highlights:"
-        on:                                     "On"
-        off:                                    "Off"
+        highlights:                             "Surbrillances:"
+        on:                                     "En marche"
+        off:                                    "A l'arrêt"
