--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -359,7 +359,7 @@ ja:
     delete:                                     "このブックマークを削除する"
     title field:                                "タイトル"
     lables:                                     "ラベル"
-    all:                                        "全ての"
+    all:                                        " ブックマーク一覧"
     labels label:                               "ラベル:"
     title:                                      "ブックマーク"
     not found:                                  "ブックマークを付けることにより、最後に読んだ箇所を思い出すことができたり、好きな聖句が書かれた箇所を見つけやすくなったり、あるいは、ある書物の中でどの章まで読んだかを思い出しやすくなります。ブックマークを付けるためには聖書リーダーの中で特定の箇所を選択し、ブックマークボタンをクリックします。"
@@ -375,7 +375,7 @@ ja:
     user badges:                                "%{user} さんのバッジ"
   plans:
     title:                                      "読書プラン"
-    browse by category:                         "Browse by Category"
+    browse by category:                         "カテゴリー別に閲覧する"
     browse plans:                               "%{category}プラン内を閲覧"
     all:                                        "全ての"
     all plans:                                  "プラン一覧"
@@ -487,25 +487,25 @@ ja:
     suggestion html:                            "もしかして %{suggestion_link} ですか?"
     all versions:                               "%{language_name}語版全て"
   donate:
-    donate now:                                 "すぐに寄付する"
-    donate now intl:                            "or donate internationally"
+    donate now:                                 "寄付する（米国内）"
+    donate now intl:                            "PayPalで寄付する（米国外）"
     promo 1:                                    "あなたからの1ドルの寄付で、モバイル機器からの聖書へのアクセスが10人に可能となります"
     promo 2:                                    "YouVersion によって、聖書がいつでも身近に。ビデオをご覧ください。"
     promo 3:                                    "今年には、50億人が携帯電話を使用するといわれています。寄付をお願いします。"
     headline:                                   "すべての人に神様の御言葉が必要です。"
-    subhead:                                    "世界中の人が聖書に簡単にアクセスできるのに貢献できます。"
-    copy:                                       "もしも世界中の全ての人に聖書を無料であげることができたら・・・と想像してみてください。YouVersion に寄付するとは、まさにそのことです。私たちは、携帯電話を持っていれば誰でも聖書にアクセスして、神様の愛に満ちた話を体験することができるという、今までは夢のようであった時代に生きています。より多くの人に、もっと聖句を読んでもらうためには、皆様からの助けが必要です。"
+    subhead:                                    "世界中の人が聖書に簡単にアクセスできますように・・・"
+    copy:                                       "もしも世界中の全ての人に聖書を無料であげることができたら・・・と想像してみてください。YouVersion に寄付するとは、まさにそのことです。私たちは、携帯電話を持っていれば誰でも聖書にアクセスして、神様の愛に満ちた物語を読むことができるという、今までは夢のようであった時代に生きています。より多くの人に、もっと聖句を読んでもらうために、皆様からのご協力を必要としています。"
     amount:                                     "寄付額（USドル建て）"
     name:                                       "お名前"
     card number:                                "クレジットカード番号"
     card exp date:                              "有効期限（月／年）"
     receipt:                                    "領収書のコピーを自分宛に送る"
     preview:                                    "寄付の内容を確認する"
-    header copy:                                "Together, we could become the most Bible-engaged generation in history. Your support means people can open God's Word on more platforms, in more languages, in more versions, and in more countries than ever before. Please fill out the form below to make your donation. We'll collect payment info on the next screen."
-    header confirm copy:                        "Together, we could become the most Bible-engaged generation in history. Your support means people can open God's Word on more platforms, in more languages, in more versions, and in more countries than ever before. Click Donate Now to make your donation."
-    donate now button:                          "すぐに寄付する"
-    email header:                               "YouVersion, a ministry of LifeChurch.tv, has received your donation. No goods or services were provided in exchange for the donation, except intangible religious benefits. Please contact giving@lifechurch.tv with questions."
-    email footer:                               "Your donation will help people around the world fall in love with God's Word."
+    header copy:                                "一緒に協力することで、聖書に熱心において史上最高の世代を実現することができます。皆様からの寄付が、今まで以上に多くのシステムでの利用を可能とし、さらに多くの言語や聖書訳を備え、さらに多くの国々の人が神様の御言葉に接することを可能にします。寄付をするには、以下のフォームの空欄にご記入お願いします。支払い方法は次の画面で入力いただきます。"
+    header confirm copy:                        "一緒に協力することで、聖書に熱心において史上最高の世代を実現することができます。皆様からの寄付が、今まで以上に多くのシステムでの利用を可能とし、さらに多くの言語や聖書訳を備え、さらに多くの国々の人が神様の御言葉に接することを可能にします。「寄付する」をクリックして寄付をお願いします。"
+    donate now button:                          "寄付する"
+    email header:                               "YouVersion（LifeChurch.tv）が寄付を受取りました。寄付と引き換えに、無形資産である宗教的信仰以外の商品やサービスの提供は行われませんでした。ご質問はgiving@lifechurch.tv までお願いします。"
+    email footer:                               "いただいた寄付は、世界中の人が神様の御言葉に傾倒する助けとなります。"
   download ad:
     title:                                      "無料聖書アプリをダウンロード"
     line 1:                                     "何百種もの訳をご用意"
@@ -574,8 +574,8 @@ ja:
     amazon:                                     "Kindle Fire"
   pages:
     generic_error:
-      title:                                    "Oops!"
-      explanation:                              "Something went wrong behind the scenes! You can try again by reloading the page, we're very sorry for the inconvenience!"
+      title:                                    "申し訳ありません。"
+      explanation:                              "何かのエラーが発生したようです。ページをリロードしてみてください。ご迷惑をおかけして申し訳ございません。"
       our action:                               "We've been notified about this and will jump on it as soon as possible."
   shared:
     menu_settings:
