pulling new translations to get new source strings :(

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -126,6 +126,7 @@ fr:
     like button text:                           "J'aime"
     unlike button text:                         "Je n'aime plus"
   notes:
+    loading community:                          "Loading community notes..."
     public:                                     "Publiques"
     private:                                    "Privée"
     draft:                                      "Brouillons"
@@ -377,6 +378,8 @@ fr:
     title:                                      "Les plans de lecture"
     browse by category:                         "Recherche par catégories"
     browse plans:                               "Parcourir les plans de %{category}"
+    swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
+    showing language filtered:                  "Only showing plans available in %{lang_name}"
     all:                                        "Tous"
     all plans:                                  "Tous les plans"
     all category plans:                         "Les plans de %{category}"
@@ -409,6 +412,7 @@ fr:
     reading completed _ mark and show next:     "Suite: %{prochaine_référence}"
     which reading:                              "%{current} de %{total}"
     done reading:                               "Effectuée"
+    no content:                                 "Your plan has no scheduled content for this day so it's been marked as completed."
     read today:                                 "Voir la lecture d'aujourd'hui"
     completion status _ below percentage:       "Terminé"
     current progress html:                      "Jour <b>%{day}</b> de <b>%{total_days}</b>"
