--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -126,6 +126,7 @@ ja:
     like button text:                           "お気に入り"
     unlike button text:                         "お気に入りを解除"
   notes:
+    loading community:                          "Loading community notes..."
     public:                                     "公開"
     private:                                    "非公開"
     draft:                                      "草稿"
@@ -377,6 +378,8 @@ ja:
     title:                                      "読書プラン"
     browse by category:                         "カテゴリー別に閲覧する"
     browse plans:                               "%{category}プラン内を閲覧"
+    swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
+    showing language filtered:                  "Only showing plans available in %{lang_name}"
     all:                                        "全ての"
     all plans:                                  "プラン一覧"
     all category plans:                         "%{category} プラン全て"
@@ -409,6 +412,7 @@ ja:
     reading completed _ mark and show next:     "次: %{next_reference}"
     which reading:                              "%{total} 中の %{current}"
     done reading:                               "完了"
+    no content:                                 "Your plan has no scheduled content for this day so it's been marked as completed."
     read today:                                 "今日の読書箇所を見る"
     completion status _ below percentage:       "完了"
     current progress html:                      "<b>%{total_days}</b> 日中の <b>%{day}</b> 日"
