--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -126,6 +126,7 @@ ko:
     like button text:                           "좋아요"
     unlike button text:                         "좋아요 취소"
   notes:
+    loading community:                          "Loading community notes..."
     public:                                     "공개"
     private:                                    "비공개"
     draft:                                      "임시저장"
@@ -377,6 +378,8 @@ ko:
     title:                                      "성경읽기 계획"
     browse by category:                         "카테고리별 보기"
     browse plans:                               "%{category} 항목의 계획 보기"
+    swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
+    showing language filtered:                  "Only showing plans available in %{lang_name}"
     all:                                        "전체"
     all plans:                                  "전체 계획"
     all category plans:                         "%{category} 항목 계획"
@@ -409,6 +412,7 @@ ko:
     reading completed _ mark and show next:     "다음: %{next_reference}"
     which reading:                              "%{total} 중 %{current}"
     done reading:                               "완료"
+    no content:                                 "Your plan has no scheduled content for this day so it's been marked as completed."
     read today:                                 "오늘의 읽기 보기"
     completion status _ below percentage:       "완료"
     current progress html:                      "<b>%{total_days}</b> 중 <b>%{day}</b> 일째"
