--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -126,6 +126,7 @@ pt-BR:
     like button text:                           "Curtir"
     unlike button text:                         "Desfazer curtir"
   notes:
+    loading community:                          "Loading community notes..."
     public:                                     "Público"
     private:                                    "Privado"
     draft:                                      "Rascunho"
@@ -378,6 +379,8 @@ Porém, com relação a conteúdo que você submete ou disponibiliza para inclus
     title:                                      "Planos de Leitura"
     browse by category:                         "Navegar por Categoria"
     browse plans:                               "Procurar %{category} Planos"
+    swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
+    showing language filtered:                  "Only showing plans available in %{lang_name}"
     all:                                        "Todos"
     all plans:                                  "Todos os Planos"
     all category plans:                         "Todos %{category} os Planos"
@@ -410,6 +413,7 @@ Porém, com relação a conteúdo que você submete ou disponibiliza para inclus
     reading completed _ mark and show next:     "Próximo: %{next_reference}"
     which reading:                              "%{current} de %{total}"
     done reading:                               "Pronto"
+    no content:                                 "Your plan has no scheduled content for this day so it's been marked as completed."
     read today:                                 "Ver as Leituras de Hoje"
     completion status _ below percentage:       "Completo"
     current progress html:                      "Dia <b>%{day}</b> de <b>%{total_days}</b>"
