--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -126,6 +126,7 @@ ru:
     like button text:                           "Нравится"
     unlike button text:                         "Не нравится"
   notes:
+    loading community:                          "Loading community notes..."
     public:                                     "Публичная"
     private:                                    "Личная"
     draft:                                      "Черновик"
@@ -377,6 +378,8 @@ ru:
     title:                                      "Планы чтения"
     browse by category:                         "Поиск по категориям"
     browse plans:                               "Просмотреть планы: %{category}"
+    swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
+    showing language filtered:                  "Only showing plans available in %{lang_name}"
     all:                                        "Все"
     all plans:                                  "Все планы"
     all category plans:                         "Все планы: %{category}"
@@ -409,6 +412,7 @@ ru:
     reading completed _ mark and show next:     "Далее: %{next_reference}"
     which reading:                              "%{current} из %{total}"
     done reading:                               "Готово"
+    no content:                                 "Your plan has no scheduled content for this day so it's been marked as completed."
     read today:                                 "Просмотреть чтение на сегодня"
     completion status _ below percentage:       "Завершено"
     current progress html:                      "День <b>%{day}</b> из <b>%{total_days}</b>"
