--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -126,6 +126,7 @@ zh-CN:
     like button text:                           "喜欢"
     unlike button text:                         "不喜欢"
   notes:
+    loading community:                          "Loading community notes..."
     public:                                     "公开"
     private:                                    "不公开"
     draft:                                      "草稿"
@@ -377,6 +378,8 @@ zh-CN:
     title:                                      "读经计划"
     browse by category:                         "分目录浏览"
     browse plans:                               "浏览%{category}计划"
+    swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
+    showing language filtered:                  "Only showing plans available in %{lang_name}"
     all:                                        "全部"
     all plans:                                  "全部读经计划"
     all category plans:                         "所有%{category}类的计划"
@@ -409,6 +412,7 @@ zh-CN:
     reading completed _ mark and show next:     "下一节 :%{next_reference}"
     which reading:                              "%{total}段中的第%{current}段"
     done reading:                               "完成"
+    no content:                                 "Your plan has no scheduled content for this day so it's been marked as completed."
     read today:                                 "查看今日阅读"
     completion status _ below percentage:       "完成"
     current progress html:                      "<b>%{total_days}</b>天中的第<b>%{day}</b>天"
