--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -126,6 +126,7 @@ zh-TW:
     like button text:                           "喜歡"
     unlike button text:                         "不喜歡"
   notes:
+    loading community:                          "Loading community notes..."
     public:                                     "公開"
     private:                                    "不公開"
     draft:                                      "草稿"
@@ -377,6 +378,8 @@ zh-TW:
     title:                                      "讀經計劃"
     browse by category:                         "分目錄瀏覽"
     browse plans:                               "瀏覽%{category}計劃"
+    swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
+    showing language filtered:                  "Only showing plans available in %{lang_name}"
     all:                                        "所有"
     all plans:                                  "所有的計劃"
     all category plans:                         "所有關於%{category}計劃"
@@ -409,6 +412,7 @@ zh-TW:
     reading completed _ mark and show next:     "下一個 :%{next_reference}"
     which reading:                              "%{total}段中的第%{current}段"
     done reading:                               "完成"
+    no content:                                 "Your plan has no scheduled content for this day so it's been marked as completed."
     read today:                                 "查看今天的閱讀內容"
     completion status _ below percentage:       "完成"
     current progress html:                      "<b>%{total_days}</b>天之第 <b>%{day}</b> 天"
