--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -126,6 +126,7 @@ sk:
     like button text:                           "Páči sa mi to"
     unlike button text:                         "Už sa mi to nepáči"
   notes:
+    loading community:                          "Loading community notes..."
     public:                                     "Verejná"
     private:                                    "Súkromná"
     draft:                                      "Návrh"
@@ -377,6 +378,8 @@ sk:
     title:                                      "Plány čítania"
     browse by category:                         "Prehľadávať podľa kategórie"
     browse plans:                               "Prehľadávať plány: %{category}"
+    swap list localization:                     "(<a href='%{swap_link}'>View in %{swap_locale}</a>)"
+    showing language filtered:                  "Only showing plans available in %{lang_name}"
     all:                                        "Všetky"
     all plans:                                  "Všetky plány"
     all category plans:                         "Všetky plány z: %{category}"
@@ -409,6 +412,7 @@ sk:
     reading completed _ mark and show next:     "Ďalej: %{next_reference}"
     which reading:                              "%{current} z %{total}"
     done reading:                               "Hotovo"
+    no content:                                 "Your plan has no scheduled content for this day so it's been marked as completed."
     read today:                                 "Zobraziť dnešné čítanie"
     completion status _ below percentage:       "Dokončené"
     current progress html:                      "Deň <b>%{day}</b> z <b>%{total_days}</b>"
